
For 5.3

    TODO: Document the Services feature and provide instructions on how to enable in macOS Services preferences.
    TODO: Async Status Menu script execution to prevent interface locking on main thread
    TODO: Fix bug where custom icns file for icon doesn't work
    TODO: Update Droplet interface screenshot
    TODO: Fix icon drag and drop
    TODO: Remove XML plist feature
    * Documentation overhauled and partially rewritten for clarity
    * Added Open With menu for items in bundled files list
    * Validate default bundle identifier in Prefs
    * Make Droplet window & others larger
    * ScriptExec tries to make bundled script executable (+x) on launch (This may resolve issues with launching apps stored on network-mounted volumes)
    * Fixed buggy UTI validation in command line tool
    * Updated to support Mojave Dark Mode
    * Fixed issue with 16x16 document icons on non-retina displays
    * Added AWK and JavaScript interpreter presets
    * Fixed exception when double-clicking bundled files header
    * Fixed bug where pressing "Clear" could cause program to crash
    * Implemented a REFRESH command to clear text output buffer and reset web view HTML
    * Moved documentation to Markdown format from HTML
    * Fixed issue where command line status in Prefs window failed to update after pressing install or uninstall
    * Various minor interface improvements

5.2
    * Platypus apps can now register as URL scheme handlers and receive opened URLs as arguments to script
    * Platypus apps can now accept dragged URLs
    * Platypus apps that accept dropped files now have an Open Recent menu
    * New syntax to create submenus in Status Menu interface type
    * Relative paths are now supported in Platypus Profiles, but only through manual editing. Platypus app and CLT still generate Profiles with absolute paths.
    * Platypus now warns about about identical file names in bundled files
    * Droplet apps now quit when their window is closed