@@ -136,7 +136,6 @@
     defaults[DefaultsKey_DefaultAuthor] = NSFullUserName();
     defaults[DefaultsKey_SymlinkFiles] = @NO;
     defaults[DefaultsKey_StripNib] = @YES;
-    defaults[DefaultsKey_UseXMLPlistFormat] = @NO;
     
     return defaults;
 }
