@@ -156,8 +156,6 @@ supported by the Cocoa APIs (e.g. PNG, JPEG, TIFF etc.)
 .It Fl c, -status-item-sysfont
 For Status Menu interface type only. Makes menu use system font instead of
 user-defined styling.
-.It Fl x, -xml-property-lists x
-Create XML format property lists instead of binary ones.
 .It Fl d, -symlink
 A symlink to the original script is created inside the application bundle
 instead of copying the script over. Symlinks are also created to any
