@@ -173,7 +173,6 @@ extern NSString * const AppSpecKey_DestinationPath;
 extern NSString * const AppSpecKey_Overwrite;
 extern NSString * const AppSpecKey_SymlinkFiles;
 extern NSString * const AppSpecKey_StripNib;
-extern NSString * const AppSpecKey_XMLPlistFormat;
 extern NSString * const AppSpecKey_Name;
 extern NSString * const AppSpecKey_ScriptPath;
 extern NSString * const AppSpecKey_InterfaceType;
@@ -229,7 +228,6 @@ extern NSString * const DefaultsKey_OpenApplicationWhenCreated;
 extern NSString * const DefaultsKey_DefaultAuthor;
 extern NSString * const DefaultsKey_SymlinkFiles;
 extern NSString * const DefaultsKey_StripNib;
-extern NSString * const DefaultsKey_UseXMLPlistFormat;
 extern NSString * const DefaultsKey_EditorFontSize;
 extern NSString * const DefaultsKey_EditorWordWrap;
 extern NSString * const DefaultsKey_Launched;
