@@ -39,7 +39,6 @@ NSString * const AppSpecKey_DestinationPath = @"Destination";
 NSString * const AppSpecKey_Overwrite = @"Overwrite";
 NSString * const AppSpecKey_SymlinkFiles = @"DevelopmentVersion";
 NSString * const AppSpecKey_StripNib = @"OptimizeApplication";
-NSString * const AppSpecKey_XMLPlistFormat = @"UseXMLPlistFormat";
 NSString * const AppSpecKey_Name = @"Name";
 NSString * const AppSpecKey_ScriptPath = @"ScriptPath";
 NSString * const AppSpecKey_InterfaceType = @"InterfaceType";
@@ -95,7 +94,6 @@ NSString * const DefaultsKey_OpenApplicationWhenCreated = @"OpenApplicationWhenC
 NSString * const DefaultsKey_DefaultAuthor = @"DefaultAuthor";
 NSString * const DefaultsKey_SymlinkFiles = @"OnCreateDevVersion";
 NSString * const DefaultsKey_StripNib = @"OnCreateOptimizeNib";
-NSString * const DefaultsKey_UseXMLPlistFormat = @"OnCreateUseXMLPlist";
 NSString * const DefaultsKey_EditorFontSize = @"EditorFontSize";
 NSString * const DefaultsKey_EditorWordWrap = @"EditorWordWrap";
 NSString * const DefaultsKey_Launched = @"Launched";
