@@ -82,8 +82,6 @@ echo &quot;Return code: $?&quot;
 	<real>13</real>
 	<key>UniformTypes</key>
 	<array/>
-	<key>UseXMLPlistFormat</key>
-	<false/>
 	<key>Version</key>
 	<string>1.0</string>
 </dict>
