@@ -88,8 +88,6 @@ open &quot;$DIR&quot;
 	<array>
 		<string>com.apple.icns</string>
 	</array>
-	<key>UseXMLPlistFormat</key>
-	<false/>
 	<key>Version</key>
 	<string>1.0</string>
 </dict>
