@@ -88,8 +88,6 @@ if len(text):
 	</array>
 	<key>UniformTypes</key>
 	<array/>
-	<key>UseXMLPlistFormat</key>
-	<false/>
 	<key>Version</key>
 	<string>1.0</string>
 </dict>
