@@ -108,8 +108,6 @@ print footer</string>
 	<real>13</real>
 	<key>UniformTypes</key>
 	<array/>
-	<key>UseXMLPlistFormat</key>
-	<false/>
 	<key>Version</key>
 	<string>1.0</string>
 </dict>
