@@ -88,8 +88,6 @@ say &quot;$WC words&quot;
 	<real>13</real>
 	<key>UniformTypes</key>
 	<array/>
-	<key>UseXMLPlistFormat</key>
-	<false/>
 	<key>Version</key>
 	<string>1.0</string>
 </dict>
