@@ -27,7 +27,8 @@ For 5.3
     TODO: Fix bug where custom icns file for icon doesn't work
     TODO: Update Droplet interface screenshot
     TODO: Fix icon drag and drop
-    TODO: Remove XML plist feature
+
+    * Removed XML plist feature
     * Documentation overhauled and partially rewritten for clarity
     * Added Open With menu for items in bundled files list
     * Validate default bundle identifier in Prefs
